--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="/static/favicon.ico?v=1">
-    <title>軟體工程-線上夾娃娃機</title>
+    <title>和進電器行</title>
   </head>
   <body>
     <noscript>
